# optorch

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_docs.sh  setup.py  test.sh
bench/: g2o_pose_graph.py  make_plot.plot  optorch_pose_graph.py  quaternion.py  run_benches.sh  viewer.py
docker/: Dockerfile  Dockerfile.build  Dockerfile.test  build.dockerfile
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/stubs/: optorch.Problem.rst.txt
docs/stubs/: optorch.Problem.html
docsrc/: conf.py  index.rst
examples/: .gitignore  circle_fit.py  ellipse_approximation.py  nist.py  rosenbrock.py  simple.py
optorch/: __init__.py  debug.py  problem.py
optorch/cpp/: angle_local_parameterization.h  main.cpp  no_locking_policy.hpp  pytorchinternals.h  shared_pool.hpp  unique_pool.hpp
